[package]
name = "fu"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
avian3d = "0.6"

# Faster iterative builds: compile dependencies with optimizations,
# keep our own crate cheap to recompile. This is Bevy's recommended dev profile.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
