[package]
name = "fu"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy =  {version = "0.18", features = ["debug"] }
avian3d = "0.6"
tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Faster iterative builds: compile dependencies with optimizations,
# keep our own crate cheap to recompile. This is Bevy's recommended dev profile.
[profile.dev]
opt-level = 1
debug = true

[profile.dev.package."*"]
opt-level = 3
